<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/season1"
        android:title="@string/season1"
        android:icon="@drawable/ic_outline_filter_list_24"/>
    <item android:id="@+id/season2"
        android:title="@string/season2"
        android:icon="@drawable/ic_outline_filter_list_24"/>
    <item android:id="@+id/season3"
        android:title="@string/season3"
        android:icon="@drawable/ic_outline_filter_list_24"/>
    <item android:id="@+id/season4"
        android:title="@string/season4"
        android:icon="@drawable/ic_outline_filter_list_24"/>
    <item android:id="@+id/season5"
        android:title="@string/season5"
        android:icon="@drawable/ic_outline_filter_list_24"/>
<!--    <item android:id="@+id/allEpisode"-->
<!--        android:title="@string/removeSeason"-->
<!--        android:icon="@drawable/ic_outline_filter_list_24"/>-->
</menu>